# pythonqt-test

./: CMakeLists.txt  linkbot.py  main.cpp  test.py
